# agent_go

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  README_CN.md  goal_updated.md  main.go  pyproject.toml  requirements-official-eoh.txt  run_eoh_grid.bat  setup.cfg
.codex/: config.toml
archive/: README.md
docs/: CLEANUP_PLAN.md  ISOLATION.md  LOOP_bp_interpretability.md  TRD_bp_interpretability.md  codex_skills.md  reproducibility.md  strategy_feature_inventory.json  strategy_feature_inventory.md
eoh_go/: __init__.py  benchmark.py  candidates.py  cli.py  efficiency_table.py  eoh_go_phase0_summary.md  evolution.py  paths.py  router_probe.py
eoh_go_workspace/: candidate_registry.json
eoh_rag/: __init__.py
legacy/: README.md
scripts/: install_codex_skills.sh  launch_gen16.sh  launch_gen16_island.sh  launch_island.sh  migrate_pool.py  run_glm_ablation_24.ps1  run_with_glm.ps1  strategy_feature_inventory.py
tests/: test_backfill_card_outcomes.py  test_candidate_guard.py  test_card_outcomes.py  test_card_synthesis.py  test_eoh_runner_specs.py  test_experiment_manifest_runner.py  test_llm_client.py  test_migrate_pool.py  test_official_eoh_run.py  test_official_eoh_smoke.py  test_operator_card_controller.py  test_rag_ablation_summary.py  test_rag_build_corpus.py  test_rag_context.py  test_rag_features.py  test_rag_llm_reranker.py  test_rag_prompt_context.py  test_rag_retriever.py  test_rag_runner_integration.py  test_rag_schemas.py  test_smart_operator.py  test_strategy_templates.py  test_summarize_manifest_runs.py  test_tocc_contracts.py  (+2 more)
(+1024 files in other folders)
