[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eoh-go"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
    "joblib>=1.2",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest"]
official-eoh = ["requests", "torch", "numba", "python-docx"]

[project.scripts]
eoh-batch = "eoh_go.experiments.batch_runner:main"

[tool.setuptools.packages.find]
include = ["eoh_go*"]
